# goit-pyweb-hw-13

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1138924f01b3_first_migration.py
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
